@@ -219,6 +219,11 @@
     </dependency>
     <dependency>
       <groupId>org.apache.pdfbox</groupId>
+      <artifactId>preflight</artifactId>
+      <version>${pdfbox.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.pdfbox</groupId>
       <artifactId>jempbox</artifactId>
       <version>${jempbox.version}</version>
     </dependency>
